# SPARK

./: .gitignore  LICENSE  pyproject.toml
src/spark/: constants.py  plot.py  utils.py
src/spark/facilities/: wise.py
src/spark/io/: __init__.py  load.py  models.py
src/spark/io/readers/: jwst.py  sdss.py
src/spark/spectral_features/: models.py
tests/: dev_testing.py
