[project]
name = "spark"
version = "0.1.0"
description = ""
authors = [
    {name = "galactic-fireball",email = "sdoan1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "spark", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
